--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ aiohttp==3.12.15
 aiosignal==1.4.0
 annotated-types==0.7.0
 anyio==4.10.0
+async-timeout==4.0.3
 asyncpg==0.30.0
 attrs==25.3.0
 cachetools==5.5.2
@@ -10,6 +11,7 @@ certifi==2025.8.3
 charset-normalizer==3.4.3
 dataclasses-json==0.6.7
 distro==1.9.0
+exceptiongroup==1.3.0
 filetype==1.2.0
 frozenlist==1.7.0
 google-ai-generativelanguage==0.6.18
