--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,11 @@ GOOGLE_API_KEY=
 GOOGLE_EMBEDDING_MODEL='models/embedding-001'
 OPENAI_API_KEY=
 OPENAI_EMBEDDING_MODEL='text-embedding-3-small'
-DATABASE_URL=
-PG_VECTOR_COLLECTION_NAME=
-PDF_PATH=
+# PGVector
+DATABASE_URL="postgresql+psycopg://postgres:postgres@localhost:5432/rag"
+PG_VECTOR_COLLECTION_NAME="desafio-pdf-collection"
+PDF_PATH="./document.pdf"
+# OLLAMA
+OLLAMA_BASE_URL="http://127.0.0.1:11434"
+EMBEDDING_MODEL="nomic-embed-text"
+OLLAMA_MODEL="llama3.2:1b"
