--- a/requirements.txt
+++ b/requirements.txt
@@ -3,17 +3,24 @@ aiohttp==3.12.15
 aiosignal==1.4.0
 annotated-types==0.7.0
 anyio==4.10.0
+asttokens==3.0.0
 async-timeout==4.0.3
 asyncpg==0.30.0
 attrs==25.3.0
 cachetools==5.5.2
 certifi==2025.8.3
 charset-normalizer==3.4.3
+comm==0.2.3
 dataclasses-json==0.6.7
+debugpy==1.8.16
+decorator==5.2.1
 distro==1.9.0
 exceptiongroup==1.3.0
+executing==2.2.1
+filelock==3.19.1
 filetype==1.2.0
 frozenlist==1.7.0
+fsspec==2025.9.0
 google-ai-generativelanguage==0.6.18
 google-api-core==2.25.1
 google-auth==2.40.3
@@ -22,56 +29,111 @@ greenlet==3.2.4
 grpcio==1.74.0
 grpcio-status==1.74.0
 h11==0.16.0
+hf-xet==1.1.9
 httpcore==1.0.9
 httpx==0.28.1
 httpx-sse==0.4.1
 idna==3.10
+ipykernel==6.30.1
+ipython==8.37.0
+jedi==0.19.2
+Jinja2==3.1.6
 jiter==0.10.0
+joblib==1.5.2
 jsonpatch==1.33
 jsonpointer==3.0.0
+jupyter_client==8.6.3
+jupyter_core==5.8.1
 langchain==0.3.27
-langchain-community==0.3.27
-langchain-core==0.3.74
+langchain-community==0.3.29
+langchain-core==0.3.76
 langchain-google-genai==2.1.9
+langchain-ollama==0.3.7
 langchain-openai==0.3.30
 langchain-postgres==0.0.15
 langchain-text-splitters==0.3.9
 langsmith==0.4.20
+MarkupSafe==3.0.2
 marshmallow==3.26.1
+matplotlib-inline==0.1.7
+mpmath==1.3.0
 multidict==6.6.4
 mypy_extensions==1.1.0
+nest-asyncio==1.6.0
+networkx==3.4.2
 numpy==2.2.6
+nvidia-cublas-cu12==12.8.4.1
+nvidia-cuda-cupti-cu12==12.8.90
+nvidia-cuda-nvrtc-cu12==12.8.93
+nvidia-cuda-runtime-cu12==12.8.90
+nvidia-cudnn-cu12==9.10.2.21
+nvidia-cufft-cu12==11.3.3.83
+nvidia-cufile-cu12==1.13.1.3
+nvidia-curand-cu12==10.3.9.90
+nvidia-cusolver-cu12==11.7.3.90
+nvidia-cusparse-cu12==12.5.8.93
+nvidia-cusparselt-cu12==0.7.1
+nvidia-nccl-cu12==2.27.3
+nvidia-nvjitlink-cu12==12.8.93
+nvidia-nvtx-cu12==12.8.90
+ollama==0.5.3
 openai==1.102.0
 orjson==3.11.3
 packaging==25.0
+parso==0.8.5
+pexpect==4.9.0
 pgvector==0.3.6
+pillow==11.3.0
+platformdirs==4.4.0
+prompt_toolkit==3.0.52
 propcache==0.3.2
 proto-plus==1.26.1
 protobuf==6.32.0
+psutil==7.0.0
 psycopg==3.2.9
 psycopg-binary==3.2.9
 psycopg-pool==3.2.6
 psycopg2-binary==2.9.10
+ptyprocess==0.7.0
+pure_eval==0.2.3
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
 pydantic==2.11.7
 pydantic-settings==2.10.1
 pydantic_core==2.33.2
+Pygments==2.19.2
 pypdf==6.0.0
+python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
 PyYAML==6.0.2
+pyzmq==27.1.0
 regex==2025.7.34
 requests==2.32.5
 requests-toolbelt==1.0.0
 rsa==4.9.1
+safetensors==0.6.2
+scikit-learn==1.7.2
+scipy==1.15.3
+sentence-transformers==5.1.0
+six==1.17.0
 sniffio==1.3.1
 SQLAlchemy==2.0.43
+stack-data==0.6.3
+sympy==1.14.0
 tenacity==9.1.2
+threadpoolctl==3.6.0
 tiktoken==0.11.0
+tokenizers==0.22.0
+torch==2.8.0
+tornado==6.5.2
 tqdm==4.67.1
+traitlets==5.14.3
+transformers==4.56.1
+triton==3.4.0
 typing-inspect==0.9.0
 typing-inspection==0.4.1
 typing_extensions==4.15.0
 urllib3==2.5.0
+wcwidth==0.2.13
 yarl==1.20.1
 zstandard==0.24.0
